@@ -1,4 +1,8 @@
 *** Version 2.7.12      (23 janvier 2018)   ***
+- Améliorations
+CAS : Ajout du paramètre CAS-ServiceURL pour permettre de forcer l'URL de redirection vers l'application
+CAS : Amélioration du processus d'authentification CAS et suppression des redirections JavaScript
+
 - Corrections
 Correction de la suppression des agents (CSRFToken)
 
